added a readme file

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/BrendanDayley/sat-personal-api.git"
   },
-  "author": "",
+  "author": "Brendan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/BrendanDayley/sat-personal-api/issues"
